update: css, navbar, styles. HTML: landing_page

--- a/fj/fitness_jerk/static/css/navbar_css.css
+++ b/fj/fitness_jerk/static/css/navbar_css.css
@@ -96,7 +96,7 @@
         background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
         backdrop-filter: blur(10px);
         -webkit-backdrop-filter: blur(10px);
-        border-radius: 18px;
+        border-radius: 12px;
         border: 1px solid rgba(255, 255, 255, 0.2);
         box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.4);
         display: flex;
@@ -107,5 +107,9 @@
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+
+    #joinus-btn {
+        border-radius: 8px;
     }
 }
