--- a/fj/fitness_jerk/templates/fitness_jerk/landing_page.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/landing_page.html
@@ -18,6 +18,10 @@
 
         I know this might sound a bit unusual...
         <br></b><a href="{% url 'about' %}" class="learn-more-btn">Learn More ></a>
+        <br></b>
+    <div class="about-btn">
+        <div id="joinus-btn"><a href="{% url 'signup' %}" class="nav-item"> Join Us</a></div>
+    </div>
     </p>
 
 </div>
