updated: navbar, styles and landing_page

--- a/fj/fitness_jerk/templates/fitness_jerk/landing_page.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/landing_page.html
@@ -20,7 +20,7 @@
         <br></b><a href="{% url 'about' %}" class="learn-more-btn">Learn More ></a>
         <br></b>
     <div class="about-btn">
-        <div id="joinus-btn"><a href="{% url 'signup' %}" class="nav-item"> Join Us</a></div>
+        <div id="joinus-btn"><a href="{% url 'signup' %}" class="nav-item"> Join us</a></div>
     </div>
     </p>
 
