--- a/fj/fitness_jerk/static/css/styles.css
+++ b/fj/fitness_jerk/static/css/styles.css
@@ -49,6 +49,7 @@ body {
     align-items: center;
     position: absolute;
     bottom: 0;
+    z-index: -1;
 }
 
 .copyright {
@@ -82,10 +83,10 @@ body {
     justify-content: center;
     align-items: center; */
     width: 40%;
-    z-index: 0;
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 1;
 
 
 }
@@ -100,7 +101,7 @@ body {
     outline: 25px solid #d19b4e;
     transform: rotate(-20deg);
     border-radius: 30px;
-    z-index: -1;
+    z-index: 0;
 }
 
 
@@ -110,9 +111,7 @@ body {
     justify-content: center;
     align-items: center;
     font-size: 5vw;
-    z-index: 0;
-    width: 100%;
-    height: 100%;
+    z-index: 2;
     text-align: center;
     color: whitesmoke;
 }
@@ -139,6 +138,7 @@ body {
     border: none;
     border-radius: 5px;
     text-align: center;
+    z-index: 5;
 }
 
 .learn-more-btn:hover {
@@ -154,11 +154,13 @@ body {
 @media (max-width: 768px) {
     .landing-page {
         width: 100%;
+        z-index: 0;
     }
 
     .outer-box {
         width: 70%;
         outline: 12px solid #d19b4e;
+        z-index: -1;
     }
 
     .land-text {
@@ -184,6 +186,7 @@ body {
     }
 
     .learn-more-btn {
+        position: relative;
         background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
         backdrop-filter: blur(10px);
         border-radius: 18px;
@@ -194,6 +197,12 @@ body {
         margin-right: auto;
         text-align: center;
         outline: none;
+    }
+
+    .about-btn {
+        position: relative;
+        margin-block-start: auto;
+        margin-bottom: 6.5rem;
     }
 }
 
@@ -682,11 +691,13 @@ button {
         overflow: auto;
         font-size: 12px;
         margin-top: 1rem;
+        z-index: 1;
     }
 
     .about-us {
         font-size: 14px;
         text-align: left;
         color: white;
+        z-index: 1;
     }
 }
