--- a/fj/fitness_jerk/templates/fitness_jerk/exercise_tone.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/exercise_tone.html
@@ -5,30 +5,32 @@
 
 {% block content %}
 <link rel="stylesheet" href="{% static 'css/timer_css.css' %}">
-<h1>FitBastards Timer</h1>
+<div class="excersie-container">
+    <h1>FitBastards Timer</h1>
 
-<button id="start-btn">Start</button>
-<button id="pause-resume-btn">Pause</button>
-<button id="finish-btn" style="display:none;"><a href="{% url 'finish' %}">Finish</a></button>
+    <button id="start-btn">Start</button>
+    <button id="pause-resume-btn">Pause</button>
+    <button id="finish-btn" style="display:none;"><a href="{% url 'finish' %}">Finish</a></button>
 
 
-<h1>Exercise List</h1>
-<h2>Exercises</h2>
+    <h1>Exercise List</h1>
+    <h2>Exercises</h2>
 
-<ul id="exercise-list">
-    {% if exercises %}
-    {% for exercise in exercises %}
-    <li class="exercise-item" data-duration="{{ exercise.duration }}" data-name="{{ exercise.name }}"
-        style="display: none;">
-        <span class="exercise-name">{{ exercise.name }}</span>
-    </li>
-    {% endfor %}
-    {% endif %}
-</ul>
+    <ul id="exercise-list">
+        {% if exercises %}
+        {% for exercise in exercises %}
+        <li class="exercise-item" data-duration="{{ exercise.duration }}" data-name="{{ exercise.name }}"
+            style="display: none;">
+            <span class="exercise-name">{{ exercise.name }}</span>
+        </li>
+        {% endfor %}
+        {% endif %}
+    </ul>
 
-<div id="message">Start</div>
-<div id="timer"></div> <!-- Initialize with 30 seconds -->
+    <div id="message">Start</div>
+    <div id="timer"></div> <!-- Initialize with 30 seconds -->
 
-<script src="{% static 'timer_js.js' %}"></script>
-<script src="{% static 'navbar_js.js' %}"></script>
+    <script src="{% static 'timer_js.js' %}"></script>
+    <script src="{% static 'navbar_js.js' %}"></script>
+</div>
 {% endblock %}
