--- a/fj/fitness_jerk/templates/fitness_jerk/profile.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/profile.html
@@ -13,7 +13,12 @@
         <div class="intro">
             <div class="post">
                 <h1>Hello</h1><h1 style="text-transform: capitalize;">{{user.username}}</h1><br>
+                {% if posts.post %}
                 <p>{{ posts.post }}</p>
+                {% else %}
+                <p>Welcome. Finally started you Bastard!!!</p>
+                {% endif %}
+        
                 
             </div>
             <div class="profile">
