--- a/fj/fitness_jerk/static/css/styles.css
+++ b/fj/fitness_jerk/static/css/styles.css
@@ -618,6 +618,45 @@ button {
 #image-clear_id, label{
     display: none;
 }
+
+/* -----------Delete page--------------- */
+
+.profile_delete {
+    display: flex;
+    background-color: #2929294f;
+    border-radius: 30px;
+    padding: 30px;
+    flex-direction: column;
+    align-items: center;
+}
+
+.profile_delete a {
+    text-decoration: none;
+    color:rgba(4, 30, 42, 1)
+}
+
+.delete_form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+.back_profile {
+    width:fit-content;
+
+}
+
+.delete {
+    width:fit-content;
+    font-size: 15px;
+    background-color: red;
+    border-radius: 10px;
+    padding: 5px;
+    color:#292929 ;
+}
+
+
     
 
 /*------------------learn_more/about_us-----------*/
