--- a/fj/fitness_jerk/templates/fitness_jerk/delete.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/delete.html
@@ -2,20 +2,16 @@
 {% load static %}
 
 <link rel="stylesheet" href="{% static 'css/style.css' %}">
-<title>Settings</title>
+<title>Delete</title>
 
 {% block content %}
-<div class="profile">
-    <form action="" method=POST>
+<div class="profile_delete">
+    <h1>{{ member }}</h1><br><br>
+    <h2>Are you sure you want to delete your account?</h2><br><br>
+    <form action="" method=POST class="delete_form">
         {% csrf_token %}
-        <h1>{{ member.username }}</h1><br><br>
-        <h1>Are you sure you want to delete your
-            account?</h1>
-        <br><br>
-        <button><a href=" {% url 'profile' %}">Back to profile</a></button>
-        <div class="delete">
-            <input type="submit" value="Delete">
-        </div>
+        <button class="back_profile"><a href=" {% url 'profile' %}">Back to profile</a></button><br><br>
+        <button type="submit" class="delete">Delete</button>
     </form>
     <script src="{% static 'navbar_js.js' %}"></script>
 </div>
